# pyhp

./: .pylintrc  404.html  README.md  index.html  index.pyhp  main.py  other.pyhp  print.html  pyhp.py  requirements.txt  setup.cfg  test.pyhp
.github/workflows/: publish-documentation.yaml  publish-to-pypi.yml  pylint.yml  python-package.yml
docs/: README.md  book.toml
docs/src/: SUMMARY.md
docs/src/getting-started/: installation.md
examples/: index.pyhp  status_code.pyhp  test.pyhp  thing.py
examples/cookies/: cookie_delete.pyhp  cookie_delete_post.pyhp  cookie_list.pyhp  cookie_set.pyhp  cookie_set_post.pyhp  index.pyhp
examples/css/: main.css
examples/hello_world/: index.pyhp
examples/importing/: importer.py  index.pyhp  maths.py
examples/importing/foo/: bar.py  baz.py
examples/redirect/: redirectee.pyhp  redirector.pyhp
examples/subfolder/: other.pyhp
pyhp/: code_execution.py  cookies.py  file_processing.py  hypertext_processing.py  pyhp.py  pyhp_flask.py  pyhp_interface.py  text_processing.py
pyhp/test/: mocks.py  test_pyhp.py  test_pyhp_flask.py
src/pyhp/: __main__.py  code_execution.py  file_processing.py  hypertext_processing.py  pyhp.py  pyhp_flask.py  pyhp_interface.py  text_processing.py
test/: mocks.py  test_pyhp.py  test_pyhp_flask.py  test_ugly_soup.py
tests/: __init__.py  test_pyhp.py
