[metadata]
name = python-hypertext-preprocessor
version = 1.0.1
author = Benjy Smith
description = An HTML preprocessor for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Benjymack/pyhp
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src